# video_marker

./: CMakeLists.txt  README
ffmeg/: README
ffmpeg/: ffmpeg-r26400-swscale-r32676.tar.bz2
include/: minimg.h  mintyp.h
pugixml/: CMakeLists.txt
src/: CMakeLists.txt  app.cpp  app.h  canvas.cpp  canvas.h  canvas_holder.cpp  canvas_holder.h  ffmpegvideo.cpp  ffmpegvideo.h  frame.cpp  frame.h  frame_id.h  interval_panel.cpp  interval_panel.h  logger.cpp  logger.h  main.cpp  markedvideo.cpp  markedvideo.h  video_markup.cpp  video_markup.h  videoreader.cpp  videoreader.h  videoreader_ffmpeg.cpp  videoreader_ffmpeg.h
testdata/: verona60.avi  verona60.avi.xml
videoreader/: CMakeLists.txt  ffmpegvideo.h  videoreader.h  videoreader_ffmpeg.cpp
videoreader/src/: ffmpegvideo.cpp  ffmpegvideo.h  videoreader.cpp  videoreader_ffmpeg.cpp  videoreader_ffmpeg.h
